--- a/app/index.html
+++ b/app/index.html
@@ -3,31 +3,110 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/index.css" />  
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/slider.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/add.css" />
+    <script>
+      // Отримуємо всі посилання з класом "huvv-slider-nav"
+      const navLinks = document.querySelectorAll(".huvv-slider-nav a");
+
+      // Додаємо обробник події для кожного посилання
+      navLinks.forEach((link) => {
+        link.addEventListener("click", function (e) {
+          e.preventDefault(); // Відмінюємо стандартну дію кліку (прокрутку)
+          // Додайте код для власної обробки кліку на посиланнях, наприклад, зміну активного слайда
+        });
+      });
+    </script>
+
     <title>Document</title>
   </head>
   <body>
     <div class="huvv-container">
       <div class="huvv-page">
-        <header class="huvv-header"></header>
+        <header class="huvv-header">
+          <div class="huvv-logo">
+            <a href="">
+              <img src="./img/Без імені.png" alt="" />
+            </a>
+          </div>
+          <div class="huvv-nav-bar">
+            <a href="">ТЕЛЕКАНАЛИ</a>
+            <a href="">ФІЛЬМИ</a>
+            <a href="">МУЛЬТФІЛЬМИ</a>
+            <a href="">СЕРІАЛИ ТА ШОУ</a>
+          </div>
+          <div class="huvv-log">
+            <button>СТВОРИТИ АКАУНТ</button>
+            <button>УВІЙТИ</button>
+          </div>
+        </header>
         <section class="huvv-slider-container">
           <div class="huvv-slider-wrapper">
             <div class="slider">
-                <img id="slide-1" src="./img/Midway_2019_-_Hollywood_War_WW2_Original_Movie_Poster_f261718e-611c-4143-9a6c-9db2fa9bdf4d.jpg" alt="IMAGE">
-                <img id="slide-2" src="./img/61zJusXlKmL._AC_UF1000,1000_QL80_.jpg" alt="IMAGE">
-                <img id="slide-3" src="./img/desktop-wallpaper-thor-movie-wide-poster-best.jpg" alt="IMAGE">
-                <img id="slide-4" src="./img/large-hayley-atwell-captain-america-film-movie-poster-wide-movies-11781438.jpg" alt="IMAGE">
-                <img id="slide-5" src="./img/onvPyiL8.jpg" alt="IMAGE">
-                <img id="slide-6" src="./img/s-l1600.jpg" alt="">
+              <img
+                id="slide-1"
+                src="./img/Midway_2019_-_Hollywood_War_WW2_Original_Movie_Poster_f261718e-611c-4143-9a6c-9db2fa9bdf4d.jpg"
+                alt="IMAGE"
+              />
+              <img
+                id="slide-2"
+                src="./img/61zJusXlKmL._AC_UF1000,1000_QL80_.jpg"
+                alt="IMAGE"
+              />
+              <img
+                id="slide-3"
+                src="./img/desktop-wallpaper-thor-movie-wide-poster-best.jpg"
+                alt="IMAGE"
+              />
+              <img
+                id="slide-4"
+                src="./img/large-hayley-atwell-captain-america-film-movie-poster-wide-movies-11781438.jpg"
+                alt="IMAGE"
+              />
+              <img id="slide-5" src="./img/onvPyiL8.jpg" alt="IMAGE" />
+              <img id="slide-6" src="./img/s-l1600.jpg" alt="" />
             </div>
             <div class="huvv-slider-nav">
-                <a href="#slide-1"></a>
-                <a href="#slide-2"></a>
-                <a href="#slide-3"></a>
-                <a href="#slide-4"></a>
-                <a href="#slide-5"></a>
-                <a href="#slide-6"></a>
+              <a href="#slide-1"></a>
+              <a href="#slide-2"></a>
+              <a href="#slide-3"></a>
+              <a href="#slide-4"></a>
+              <a href="#slide-5"></a>
+              <a href="#slide-6"></a>
             </div>
+          </div>
+        </section>
+        <section class="huvv-add">
+          <div>
+            <a href="">
+              <img src="./img/61zJusXlKmL._AC_UF1000,1000_QL80_.jpg" alt="" />
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <img
+                src="./img/desktop-wallpaper-thor-movie-wide-poster-best.jpg"
+                alt=""
+              />
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <img
+                src="./img/large-hayley-atwell-captain-america-film-movie-poster-wide-movies-11781438.jpg"
+                alt=""
+              />
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <img
+                src="./img/Midway_2019_-_Hollywood_War_WW2_Original_Movie_Poster_f261718e-611c-4143-9a6c-9db2fa9bdf4d.jpg"
+                alt=""
+              />
+            </a>
           </div>
         </section>
       </div>
