(Vlad Musikhin) fix a path 11.09.2023

--- a/app/index.html
+++ b/app/index.html
@@ -49,19 +49,19 @@
         <div class="widgets">
           <div class="types">
             <div class="types__el">
-              <img src="fonts/types/t2.png" alt="">
+              <img src="fonts/t2.png" alt="">
             </div>
             <div class="types__el">
-              <img src="./fonts/types/t4.png" alt="">
+              <img src="fonts/t4.png" alt="">
             </div>
             <div class="types__el">
-              <img src="fonts/types/t3.png" alt="">
+              <img src="fonts/t3.png" alt="">
             </div>
             <div class="types__el">
-              <img src="fonts/types/t5.png" alt="">
+              <img src="fonts/t5.png" alt="">
             </div>
             <div class="types__el">
-              <img src="fonts/types/t1.png" alt="">
+              <img src="fonts/t1.png" alt="">
             </div>
           </div>
           <div class="streams-block">
@@ -74,25 +74,25 @@
             </div>
             <div class="streams">
               <div class="streams__el">
-                <img src="./fonts/streams/r300x0x4.png">
+                <img src="fonts/r300x0x4.png">
                 <span>"Єдині новини". Телемарафон</span>
                 <span class="streams__el__date">11 вересня, 08:00</span>
                 <span class="streams__el__cost">Безкоштовно</span>
               </div>
               <div class="streams__el">
-                <img src="./fonts/streams/r300x0x4 (1).png" alt="">
+                <img src="fonts/r300x0x4%20(1).png" alt="">
                 <span>"Єдині новини". Телемарафон</span>
                 <span class="streams__el__date">11 вересня, 08:00</span>
                 <span class="streams__el__cost">Безкоштовно</span>
               </div>
               <div class="streams__el">
-                <img src="./fonts/streams/r300x0x4 (2).png" alt="">
+                <img src="fonts/r300x0x4%20(2).png" alt="">
                 <span>"Єдині новини". Телемарафон</span>
                 <span class="streams__el__date">11 вересня, 08:00</span>
                 <span class="streams__el__cost">Безкоштовно</span>
               </div>
               <div class="streams__el">
-                <img src="./fonts/streams/r300x0x4 (3).png" alt="">
+                <img src="fonts/r300x0x4%20(3).png" alt="">
                 <span>"Єдині новини". Телемарафон</span>
                 <span class="streams__el__date">11 вересня, 08:00</span>
                 <span class="streams__el__cost">Безкоштовно</span>
