Fixed according to acceptance criterieas

--- a/app/index.html
+++ b/app/index.html
@@ -4,22 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/slider.css" />
+    <link rel="stylesheet" href="./scss/add.css" />
     <link rel="stylesheet" href="./css/header.css" />
-    <link rel="stylesheet" href="./css/add.css" />
-    <script>
-      // Отримуємо всі посилання з класом "huvv-slider-nav"
-      const navLinks = document.querySelectorAll(".huvv-slider-nav a");
-
-      // Додаємо обробник події для кожного посилання
-      navLinks.forEach((link) => {
-        link.addEventListener("click", function (e) {
-          e.preventDefault(); // Відмінюємо стандартну дію кліку (прокрутку)
-          // Додайте код для власної обробки кліку на посиланнях, наприклад, зміну активного слайда
-        });
-      });
-    </script>
-
+    <link rel="stylesheet" href="./scss/slider.css" />
+    <link rel="stylesheet" href="./css/media-queries.css">
     <title>Document</title>
   </head>
   <body>
