--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <img src="img/megogo-logo.svg" alt="" class="header__logo">
+        <img src="./img/megogo-logo.svg" alt="" class="header__logo">
         <div class="header__navigation-menu">
           <a>ТЕЛЕКАНАЛИ</a>
           <a>ФІЛЬМИ</a>
@@ -49,19 +49,19 @@
         <div class="widgets">
           <div class="types">
             <div class="types__el">
-              <img src="fonts/t2.png" alt="">
+              <img src="./fonts/t2.png" alt="">
             </div>
             <div class="types__el">
-              <img src="fonts/t4.png" alt="">
+              <img src="./fonts/t4.png" alt="">
             </div>
             <div class="types__el">
-              <img src="fonts/t3.png" alt="">
+              <img src="./fonts/t3.png" alt="">
             </div>
             <div class="types__el">
-              <img src="fonts/t5.png" alt="">
+              <img src="./fonts/t5.png" alt="">
             </div>
             <div class="types__el">
-              <img src="fonts/t1.png" alt="">
+              <img src="./fonts/t1.png" alt="">
             </div>
           </div>
           <div class="streams-block">
@@ -74,25 +74,25 @@
             </div>
             <div class="streams">
               <div class="streams__el">
-                <img src="fonts/r300x0x4.png">
+                <img src="./fonts/r300x0x4.png">
                 <span>"Єдині новини". Телемарафон</span>
                 <span class="streams__el__date">11 вересня, 08:00</span>
                 <span class="streams__el__cost">Безкоштовно</span>
               </div>
               <div class="streams__el">
-                <img src="fonts/r300x0x4%20(1).png" alt="">
+                <img src="./fonts/r300x0x4%20(1).png" alt="">
                 <span>"Єдині новини". Телемарафон</span>
                 <span class="streams__el__date">11 вересня, 08:00</span>
                 <span class="streams__el__cost">Безкоштовно</span>
               </div>
               <div class="streams__el">
-                <img src="fonts/r300x0x4%20(2).png" alt="">
+                <img src="./fonts/r300x0x4%20(2).png" alt="">
                 <span>"Єдині новини". Телемарафон</span>
                 <span class="streams__el__date">11 вересня, 08:00</span>
                 <span class="streams__el__cost">Безкоштовно</span>
               </div>
               <div class="streams__el">
-                <img src="fonts/r300x0x4%20(3).png" alt="">
+                <img src="./fonts/r300x0x4%20(3).png" alt="">
                 <span>"Єдині новини". Телемарафон</span>
                 <span class="streams__el__date">11 вересня, 08:00</span>
                 <span class="streams__el__cost">Безкоштовно</span>
