(fix) fix icons size

--- a/app/index.html
+++ b/app/index.html
@@ -25,13 +25,13 @@
         <li>БЛОГЕРИ</li>
       </ul>
       <button>
-        <img src="./img/options.png" alt="options">
+        <img class="icon" src="img/icons/options.png" alt="options">
       </button>
     </div>
     <div class="navigation-actions">
       <button class="btn">Тарифи</button>
       <button>
-        <img src="./img/search.png" alt="search">
+        <img class="icon" src="img/icons/search.png" alt="search">
       </button>
       <div class="lang">
         UA
@@ -42,5 +42,11 @@
     </div>
   </nav>
 </header>
+
+<main>
+  <div class="carousel">
+
+  </div>
+</main>
 </body>
 </html>
