(feat) addd carousel

--- a/app/index.html
+++ b/app/index.html
@@ -11,42 +11,98 @@
   <title>Megogo</title>
 </head>
 <body>
-<header>
-  <nav>
-    <div>
-      <div class=title>M E G O G O</div>
-      <ul class="navigation-list">
-        <li>ТЕЛЕКАНАЛИ</li>
-        <li>ФІЛЬМИ</li>
-        <li>МУЛЬТФІЛЬМИ</li>
-        <li>СЕРІАЛИ</li>
-        <li>ШОУ</li>
-        <li>СПОРТ</li>
-        <li>БЛОГЕРИ</li>
-      </ul>
-      <button>
-        <img class="icon" src="img/icons/options.png" alt="options">
-      </button>
-    </div>
-    <div class="navigation-actions">
-      <button class="btn">Тарифи</button>
-      <button>
-        <img class="icon" src="img/icons/search.png" alt="search">
-      </button>
-      <div class="lang">
-        UA
-      </div>
-      <div class="login">
-        УВІЙТИ
-      </div>
-    </div>
-  </nav>
-</header>
+<div class="main-container">
 
-<main>
-  <div class="carousel">
+  <header>
+    <nav>
+      <div>
+        <div class=title>M E G O G O</div>
+        <ul class="navigation-list">
+          <li><a href="#">ТЕЛЕКАНАЛИ</a></li>
+          <li><a href="#">ФІЛЬМИ</a></li>
+          <li><a href="#">МУЛЬТФІЛЬМИ</a></li>
+          <li><a href="#">СЕРІАЛИ</a></li>
+          <li><a href="#">ШОУ</a></li>
+          <li><a href="#">СПОРТ</a></li>
+          <li><a href="#">БЛОГЕРИ</a></li>
+        </ul>
+        <button>
+          <img class="icon" src="img/icons/options.png" alt="options">
+        </button>
+      </div>
+      <div class="navigation-actions">
+        <button class="btn">Тарифи</button>
+        <button>
+          <img class="icon" src="img/icons/search.png" alt="search">
+        </button>
+        <div class="lang">
+          UA
+        </div>
+        <div class="login">
+          УВІЙТИ
+        </div>
+      </div>
+    </nav>
+  </header>
 
-  </div>
-</main>
+  <main>
+    <div class="carousel-container">
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-1.webp" alt="Image 1">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-2.webp" alt="Image 2">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-3.webp" alt="Image 3">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-4.webp" alt="Image 4">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-5.webp" alt="Image 5">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-6.webp" alt="Image 6">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-7.webp" alt="Image 7">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-8.webp" alt="Image 8">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-9.webp" alt="Image 9">
+        </div>
+      </div>
+      <div class="item">
+        <div class="image">
+          <img src="./img/carousel/carousel-10.webp" alt="Image 10">
+        </div>
+      </div>
+      <a class="prev"><</a>
+      <a class="next">></a>
+    </div>
+  </main>
+</div>
+
+<script src="./js/carousel.js"></script>
 </body>
 </html>
