(feat) completed task

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 <div class="main-container">
-
   <header>
     <nav>
       <div>
@@ -100,7 +99,142 @@
       <a class="prev"><</a>
       <a class="next">></a>
     </div>
+
+    <div class="shortcuts container">
+      <div class="shortcuts content">
+        <div class="shortcut">
+          <img src="./img/shortcuts/shortcut-1.webp" alt="Shortcut 1">
+        </div>
+        <div class="shortcut">
+          <img src="./img/shortcuts/shortcut-2.webp" alt="Shortcut 2">
+        </div>
+        <div class="shortcut">
+          <img src="./img/shortcuts/shortcut-3.webp" alt="Shortcut 3">
+        </div>
+        <div class="shortcut">
+          <img src="./img/shortcuts/shortcut-4.webp" alt="Shortcut 4">
+        </div>
+        <div class="shortcut">
+          <img src="./img/shortcuts/shortcut-5.webp" alt="Shortcut 5">
+        </div>
+      </div>
+    </div>
+
+    <div class="now-on-tv container">
+      <div class="content">
+        <div class="nav">
+          <p class="title">Зараз на ТБ</p>
+          <div class="arrows">
+            <button class="arrow" disabled><</button>
+            <button class="arrow">></button>
+          </div>
+        </div>
+
+        <div class="items">
+          <div class="item">
+            <img src="./img/now_on_tv/now-on-tv-1.webp" alt="Now On Tv 1">
+            <p class="name">Т/с "Будиночок на щастя".</p>
+            <p class="date">20 вересня, 15:55</p>
+            <p class="price">БЕЗКОШТОВНО</p>
+          </div>
+
+          <div class="item">
+            <img src="./img/now_on_tv/now-on-tv-2.webp" alt="Now On Tv 2">
+            <p class="name">"СЛіпа". "Плетанина".</p>
+            <p class="date">20 вересня, 15:55</p>
+            <p class="price">БЕЗКОШТОВНО</p>
+          </div>
+
+          <div class="item">
+            <img src="./img/now_on_tv/now-on-tv-3.webp" alt="Now On Tv 3">
+            <p class="name">"Єдині новини". Телемарафон.</p>
+            <p class="date">20 вересня, 16:00</p>
+            <p class="price">БЕЗКОШТОВНО</p>
+          </div>
+
+          <div class="item">
+            <img src="./img/now_on_tv/now-on-tv-4.webp" alt="Now On Tv 4">
+            <p class="name">"Єдині новини". Телемарафон.</p>
+            <p class="date">20 вересня, 16:00</p>
+            <p class="price">БЕЗКОШТОВНО</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="premiers container">
+      <div class="content">
+        <div class="nav">
+          <p class="title">Прем'єри</p>
+          <div class="arrows">
+            <button class="arrow" disabled><</button>
+            <button class="arrow">></button>
+          </div>
+        </div>
+
+        <div class="items">
+          <div class="item">
+            <img src="./img/premiers/premier-1.webp" alt="Premier 1">
+            <p class="name">Рейс</p>
+            <p class="date">2022, Бойовики</p>
+            <p class="price">ПОКУПКА</p>
+          </div>
+
+          <div class="item">
+            <img src="./img/premiers/premier-2.webp" alt="Premier 2">
+            <p class="name">БлекБеррі</p>
+            <p class="date">2023, Комедії</p>
+            <p class="price">ПОКУПКА</p>
+          </div>
+
+          <div class="item">
+            <img src="./img/premiers/premier-3.webp" alt="Premier 3">
+            <p class="name">Три мушкетери: Д'Артаньян</p>
+            <p class="date">2023, Бойовики</p>
+            <p class="price">ПОКУПКА</p>
+          </div>
+
+          <div class="item">
+            <img src="./img/premiers/premier-4.webp" alt="Premier 4">
+            <p class="name">Джон Уік 4</p>
+            <p class="date">2023, Бойовики</p>
+            <p class="price">ПОКУПКА</p>
+          </div>
+
+          <div class="item">
+            <img src="./img/premiers/premier-5.webp" alt="Premier 5">
+            <p class="name">Барбі</p>
+            <p class="date">2022, Комедії</p>
+            <p class="price">ПОКУПКА</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
+
+  <footer>
+    <div class="container">
+      <div class="content">
+
+        <div class="title">
+          M E G O G O
+        </div>
+        <ul class="footer-list">
+          <li><a href="#">ТЕЛЕКАНАЛИ</a></li>
+          <li><a href="#">ФІЛЬМИ</a></li>
+          <li><a href="#">МУЛЬТФІЛЬМИ</a></li>
+          <li><a href="#">СЕРІАЛИ</a></li>
+          <li><a href="#">ШОУ</a></li>
+          <li><a href="#">СПОРТ</a></li>
+          <li><a href="#">ОСВІТА</a></li>
+          <li><a href="#">DISCOVERY+</a></li>
+        </ul>
+        <div class="license">
+          ©2023 MEGOGO. Всі права захищені.
+        </div>
+      </div>
+    </div>
+  </footer>
 </div>
 
 <script src="./js/carousel.js"></script>
