--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
   <title>PZ_1_8</title>
-  <link rel="stylesheet" type="text/css" href="./css/general.css">
+  <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
     <header class="header">
