--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="ser">
     <div class="slider-cont">
         <div class="slider">
-            <div class="img"><img src="https://s5.vcdn.biz/static/f/6474756911/image.jpg/pt/r0x0" alt="Изображение 3"></div>
+            <div class="img"><img src="1.jpg" alt="Изображение 3"></div>
         </div>
     </div>
 </div>
